--- a/src/App/templates/layout/marquemenu.phtml
+++ b/src/App/templates/layout/marquemenu.phtml
@@ -5,5 +5,6 @@
   </button>
   <div class="dropdown-menu">
     <a class="dropdown-item" href="https://scrappage.co.uk/sp/car-marques/marque/mercedes/">Mercedes-Benz</a>
+    <a class="dropdown-item" href="https://scrappage.co.uk/sp/car-marques/marque/ford/">Ford</a>
   </div>
 </div>
