Added Marque page Added Model Page Added Model Spec + Quote Estimator Added Static Pages (S.Schemes Explained & Car Finance & HP Finance) Added Home Page content.
Layout Tidied:
Main layout using Bootstrap/ CSS Grid

Added Site links & Menus

Static Links:
Spec Page, Blog, Posts in Sidebar

Placed some content in Sidebar

--- a/src/App/templates/app/home-page.phtml
+++ b/src/App/templates/app/home-page.phtml
@@ -1,116 +1,34 @@
 <?php $this->headTitle('Home'); ?>
+<h1>Scrappage</h1>
+<p>Find the latest 2017 Scrappage Schemes and deals from  <a href="https://scrappage.co.uk/sp/toyota-scrappage-scheme-2017/">Toyota</a>, <a href="https://scrappage.co.uk/sp/ford/">Ford</a>, <a href="https://scrappage.co.uk/sp/kia-scrappage-scheme-2017/">Kia</a>, <a href="https://scrappage.co.uk/sp/hyundai/">Hyundai</a> and <a href="https://scrappage.co.uk/sp/all-makes/">others</a>
 
-<div class="jumbotron">
-    <h1>Welcome to <span class="zf-green">zend-expressive</span></h1>
-    <p>
-        Congratulations! You have successfully installed the
-        <a href="https://github.com/zendframework/zend-expressive-skeleton" target="_blank">zend-expressive skeleton application</a>.
-        This skeleton can serve as a simple starting point for you to begin building your application.
-    </p>
-    <p>
-        Expressive builds on zend-stratigility to provide a minimalist PSR-7 middleware framework for PHP.
-    </p>
+
+
+<p>Understand Scrappage in  <a href="https://scrappage.co.uk/sp/scrappage-schemes-explained/">Scrappage Schemes Explained</a>.
+
+<p><b>Recent Posts</b><br />
+</p>
+<div class="post-394 post type-post status-publish format-standard hentry category-uncategorised">
+    <a href="https://scrappage.co.uk/sp/hyundai-extends-scrappage-scheme/">Hyundai Extends Scrappage Scheme</a>  by kevin-sp (4th January 2018)<br />
+    Hyundai has extended its Scrappage Scheme to the 1st quarter of 2018. This is in line with recent scheme extensions from Ford, VW, Kia and others.
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>
-            <a href="https://docs.zendframework.com/zend-expressive/getting-started/features" target="_blank">
-                <i class="fa fa-bolt"></i> Agile &amp; Lean
-            </a>
-        </h2>
-        <p>
-            Expressive is fast, small and perfect for rapid application development, prototyping and api's.
-            You decide how you extend it and choose the best packages from major framework or standalone projects.
-        </p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>
-            <a href="https://github.com/zendframework/zend-diactoros" target="_blank">
-                <i class="fa fa-exchange-alt"></i> HTTP Messages
-            </a>
-        </h2>
-        <p>
-            HTTP messages are the foundation of web development. Web browsers and HTTP clients such as cURL create
-            HTTP request messages that are sent to a web server, which provides an HTTP response message.
-            Server-side code receives an HTTP request message, and returns an HTTP response message.
-        </p>
-    </div>
-
-    <div class="col-md-4">
-        <h2>
-            <a href="https://github.com/zendframework/zend-stratigility" target="_blank">
-                <i class="fa fa-dot-circle"></i> Middleware
-            </a>
-        </h2>
-        <p>
-            Middleware is code that exists between the request and response, and which can take the incoming
-            request, perform actions based on it, and either complete the response or pass delegation on to the
-            next middleware in the queue. Your application is easily extended with custom middleware created by
-            yourself or <a href="https://packagist.org/search/?q=middleware" target="_blank">others</a>.
-        </p>
-    </div>
+<br />
+<div class="post-392 post type-post status-publish format-standard hentry category-uncategorised">
+    <a href="https://scrappage.co.uk/sp/kia-extends-scrappage-scheme-to-2018/">Kia Extends Scrappage Scheme to 2018</a>  by kevin-sp (2nd January 2018)<br />
+    Kia follows Toyota , Ford and others and has extended its Scrappage Scheme into 2018.
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>
-            <a href="https://docs.zendframework.com/zend-expressive/features/container/intro" target="_blank">
-                <i class="fa fa-cube"></i> Containers
-            </a>
-        </h2>
-        <p>
-            Expressive promotes and advocates the usage of Dependency Injection/Inversion of Control containers
-            when writing your applications. Expressive supports multiple containers which typehints against
-            <a href="https://github.com/php-fig/container" target="_blank">PSR Container</a>.
-        </p>
-        <?php if (isset($this->containerName)) : ?>
-            <p>
-                <a href="<?= $this->containerDocs ?>" target="_blank">
-                    Get started with <?= $this->containerName ?>.
-                </a>
-            </p>
-        <?php endif; ?>
-    </div>
-
-    <div class="col-md-4">
-        <h2>
-            <a href="https://docs.zendframework.com/zend-expressive/features/router/intro" target="_blank">
-                <i class="fa fa-plane"></i> Routers
-            </a>
-        </h2>
-        <p>
-            One fundamental feature of zend-expressive is that it provides mechanisms for implementing dynamic
-            routing, a feature required in most modern web applications. Expressive ships with multiple adapters.
-        </p>
-        <?php if (isset($this->routerName)) : ?>
-            <p>
-                <a href="<?= $this->routerDocs ?>" target="_blank">
-                    Get started with <?= $this->routerName ?>.
-                </a>
-            </p>
-        <?php endif; ?>
-    </div>
-
-    <div class="col-md-4">
-        <h2>
-            <a href="https://docs.zendframework.com/zend-expressive/features/template/zend-view" target="_blank">
-                <i class="fa fa-edit"></i> Templating
-            </a>
-        </h2>
-        <p>
-            By default, no middleware in Expressive is templated. We do not even provide a default templating
-            engine, as the choice of templating engine is often very specific to the project and/or organization.
-            However, Expressive does provide abstraction for templating, which allows you to write middleware that
-            is engine-agnostic.
-        </p>
-        <?php if (isset($this->templateName)) : ?>
-            <p>
-                <a href="<?= $this->templateDocs ?>" target="_blank">
-                    Get started with <?= $this->templateName ?>.
-                </a>
-            </p>
-        <?php endif; ?>
-    </div>
+<br />
+<div class="post-389 post type-post status-publish format-standard hentry category-uncategorised">
+    <a href="https://scrappage.co.uk/sp/vw-extends-scrappage-scheme-into-2018/">VW extends scrappage scheme into 2018</a>  by kevin-sp (31st December 2017)<br />
+    Volkswagen joins Ford &amp; Toyota in extending their VW Scrappage Scheme into 2018. New cars under this scheme must be ordered by 2 April 2018 and delivered by 30 June 2018. VW are expecting a surge before the £500 tax hike on new diesel from April 2018. The new Polo has a £2,000 discount instead &hellip; <a href="https://scrappage.co.uk/sp/vw-extends-scrappage-scheme-into-2018/" class="more-link">Continue reading<span class="screen-reader-text"> "VW extends scrappage scheme into 2018"</span></a>
+</div>
+<br />
+<div class="post-367 post type-post status-publish format-standard hentry category-uncategorised">
+    <a href="https://scrappage.co.uk/sp/toyota-extends-scrappage-scheme/">Toyota Extends Scrappage Scheme</a>  by kevin-sp (13th December 2017)<br />
+    Toyota has followed Ford and announced that the Toyota Scrappage Scheme will be extended to the end of January 2018.
+</div>
+<br />
+<div class="post-353 post type-post status-publish format-standard hentry category-uncategorised">
+    <a href="https://scrappage.co.uk/sp/ford-extends-scrappage-scheme/">Ford Extends Scrappage Scheme</a>  by kevin-sp (13th December 2017)<br />
+    Ford are extending the Ford Scrappage Scheme into the first quarter of 2018. Ford has seen over 10,500 vehicles scrapped and replaced with cleaner ones. Also Ford are including the Ford Ranger in the scheme for the first time as well as the most popular new Focus, Fiesta and Transit CV models. &nbsp; &nbsp; “The &hellip; <a href="https://scrappage.co.uk/sp/ford-extends-scrappage-scheme/" class="more-link">Continue reading<span class="screen-reader-text"> "Ford Extends Scrappage Scheme"</span></a>
 </div>
