--- a/src/App/templates/layout/marquemenu.phtml
+++ b/src/App/templates/layout/marquemenu.phtml
@@ -4,7 +4,7 @@
     New Cars
   </button>
   <div class="dropdown-menu">
-    <a class="dropdown-item" href="https://scrappage.co.uk/sp/car-marques/marque/mercedes/">Mercedes-Benz</a>
-    <a class="dropdown-item" href="https://scrappage.co.uk/sp/car-marques/marque/ford/">Ford</a>
+    <a class="dropdown-item" href="/marque/mercedes/">Mercedes-Benz</a>
+    <a class="dropdown-item" href="/marque/ford/">Ford</a>
   </div>
 </div>
