Added New vehicle search facility.

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -61,6 +61,13 @@ ins {
     font-size: 1.8em;
 }
 
+.searchcarheader {
+    margin: auto;
+    border: 0 solid black;
+    text-align: left;
+    font-size: 1.3em;
+}
+
 
 .modelline {
     grid-column: 1;
