--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -59,17 +59,16 @@ $this->inlineScript()
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                    <?= $this->MarqueList() ?>
+                                    <?php echo $this->MarqueList() ?>
                                 </div>
                             </div>
                         </li>
 
 
-                        <li class="nav-item">
-                            <a href="<?= $this->serverUrl('/sp/') ?>" class="nav-link">
-                                Blog
-                            </a>
-                        </li>
+
+
+
+
                         <li class="nav-item">
                             <div class="dropdown show">
                                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -94,7 +93,16 @@ $this->inlineScript()
                                 </div>
                             </div>
                         </li>
-
+                        <li class="nav-item">
+                            <a href="<?= $this->serverUrl('/sp/') ?>" class="nav-link">
+                                Blog
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="<?= $this->serverUrl('/search') ?>" class="nav-link">
+                                Search
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
