Search enhancements: Search results link through to model pages. Design change to user error notification. Marque drop down menu cross references global Marque definitions with local list of marques currently available on the system.
Added local versions of CSS files (although site links to CDN versions
currently).

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -195,3 +195,13 @@ body {
     border: 0 solid black;
     color: #999999;
 }
+
+.error {
+    border: 2px solid crimson;
+}
+
+.resultentry:hover {
+    background-color: #e6f1ff;
+    cursor: pointer;
+
+}
