--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -18,6 +18,7 @@ $this->inlineScript()
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link rel="shortcut icon" href="https://framework.zend.com/ico/favicon.ico" />
     <?= $this->headTitle('Scrappage')->setSeparator(' | ')->setAutoEscape(false) ?>
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" media="screen" rel="stylesheet" type="text/css">
     <?=$this->headMeta()?>
     <?=$this->headLink()?>
     <style>
@@ -168,6 +169,8 @@ $this->inlineScript()
             </p>
         </div>
     </div>
+
+
     <?=$this->inlineScript()?>
 </body>
 </html>
