Add Authorisation facility and Log On/Off form & page.

--- a/src/App/templates/app/car-finance.phtml
+++ b/src/App/templates/app/car-finance.phtml
@@ -1,4 +1,5 @@
-<h1 class="entry-title">Car Finance</h1>
+<?php $this->headTitle('Car Finance'); ?>
+<h2 class="entry-title">Car Finance</h2>
 
 
 <div class="entry-content">
