--- a/src/App/templates/app/scrappage-schemes-explained.phtml
+++ b/src/App/templates/app/scrappage-schemes-explained.phtml
@@ -1,8 +1,9 @@
-<h1>Scrappage Schemes Explained</h1>
+<?php $this->headTitle('Scrappage Schemes Explained'); ?>
+<h2>Scrappage Schemes Explained</h2>
     <br />
     <br />
 
-<h2>Overview</h2>
+<h3>Overview</h3>
 Scrappage schemes are deals provided by manufacturers, shops, dealers and/or governments or other public bodies whereby incentives are offered to encourage owners to trade in goods in exchange for something new.
 
 Scrappage schemes gained attention when the UK government in 2009 offered
@@ -14,7 +15,7 @@ Since that time, various companies and manufacturers have offered various trade 
 <br />
     <br />
 
-<h2>2017 Car Scrappage Schemes</h2>
+<h3>2017 Car Scrappage Schemes</h3>
 2017 saw the introduction of a number new schemes and trade in deals from car makers in response to growing public concern over pollution caused by diesel powered cars and dieselgate.
 
 The new vehicle scrappage schemes for 2017 are a mixture of scrappage (where your traded in vehicle is scrapped) and trade in where the vehicle may be scrapped or sold on , at the discretion of the dealer.
