--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -1,4 +1,8 @@
 <?php
+
+$rn = $this->routeHelper()->getMatchedRouteName();
+$rp = $this->routeHelper()->getMatchedParams();
+
 $this->headLink()
     ->prependStylesheet('/styles/style.css')
     ->prependStylesheet('https://use.fontawesome.com/releases/v5.0.6/css/all.css')
@@ -73,7 +77,7 @@ $this->inlineScript()
                         <li class="nav-item">
                             <div class="dropdown show">
                                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Scrappage Schemes By Manufacturer
+                                    Scrappage Schemes
                                 </a>
 
                                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
@@ -103,6 +107,18 @@ $this->inlineScript()
                             <a href="<?= $this->serverUrl('/search') ?>" class="nav-link">
                                 Search
                             </a>
+                        </li>
+                        <li class="nav-item">
+                        <?= $this->LogOnOffToggleHelper() ?>
+                        </li>
+                        <li class = "nav-item">
+                            <span class="navbar-text">
+                                <?php
+                                    echo $this->IdentHelper()['persondoc']['0']['firstname'].
+                                        ' '.
+                                        $this->IdentHelper()['persondoc']['0']['lastname'];
+                                ?>
+                            </span>
                         </li>
                     </ul>
                 </div>
@@ -153,9 +169,7 @@ $this->inlineScript()
                           <li>
                               <a href="<?= $this->serverUrl($this->url('carmodel', ['marque' => 'Kia', 'model' => 'Picanto','modelid' => '5aad14d8c65afe6fa89be359'])) ?>">Kia Picanto £58.48/mo</a>
                           </li>
-
                       </ul>
-                      <!--<div style="margin-left:auto; margin-right:0; background-color: darkgoldenrod; height: 600px; width: 120px"></div>-->
                   <div>
 	    	  </div>
 	    </div>
