--- a/src/App/templates/app/search.phtml
+++ b/src/App/templates/app/search.phtml
@@ -49,7 +49,7 @@ EOF;
     }
 }
 ?>
-
+<h2>Search</h2>
 <div class="container">
     <div class="row">
         <div class="col-lg-8"><?=$sform?></div>
